--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,13 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+            returnDefaultValues = true
+        }
+    }
 }
 
 dependencies {
@@ -42,4 +49,16 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    testImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    // Roboletric
+    testImplementation 'org.robolectric:robolectric:4.4'
+    testImplementation 'androidx.test.espresso:espresso-intents:3.3.0'
+
+    testImplementation 'androidx.test:core:1.3.0'
+    testImplementation 'androidx.test.ext:truth:1.3.0'
+    testImplementation 'com.google.truth:truth:1.0'
+    testImplementation 'androidx.test.ext:junit:1.1.2'
+
+    testImplementation 'io.mockk:mockk:1.11.0'
 }
