--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,9 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.4.0'
     androidTestImplementation 'androidx.test:rules:1.4.0'
 
+    // Intent dependency
+    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.4.0'
+
     // List Espresso helper
     androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.4.0'
 
