--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,23 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.nicco.androidespressocodes">
-    <uses-permission android:name="android.permission.CALL_PHONE"/>
+    package="com.nicco.androidespressocodes" >
 
-    <!-- If you want to see how its work, just change the action.Main to what activity do you need to see working -->
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="true" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AndroidEspressoCodes">
-        <activity android:name=".list.ListActivity"/>
+        android:theme="@style/Theme.AndroidEspressoCodes" >
+        <activity android:name=".list.ListActivity" />
         <activity android:name=".dialer.ContactsActivity" />
         <activity android:name=".login.LoginActivity" />
         <activity android:name=".login.AnotherActivity" />
         <activity android:name=".toast.ToastActivity" />
-
-        <activity android:name=".dialer.DialerActivity">
+        <activity android:name=".dialer.DialerActivity" />
+        <activity android:name=".image.ImageViewerActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
