--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.nicco.androidespressocodes" >
+    package="com.nicco.androidespressocodes">
 
     <uses-permission android:name="android.permission.CALL_PHONE" />
 
@@ -14,14 +14,15 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AndroidEspressoCodes" >
+        android:theme="@style/Theme.AndroidEspressoCodes">
+        <activity android:name=".image.ImageViewerActivity" />
         <activity android:name=".list.ListActivity" />
         <activity android:name=".dialer.ContactsActivity" />
         <activity android:name=".login.LoginActivity" />
         <activity android:name=".login.AnotherActivity" />
         <activity android:name=".toast.ToastActivity" />
         <activity android:name=".dialer.DialerActivity" />
-        <activity android:name=".image.ImageViewerActivity" >
+        <activity android:name=".webview.WebViewActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
